documentation: added docs for route api.users.analysis.create
