# openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: 'MedArea RESTful API'
-  version: 1.0.1
+  version: 1.0.3
 paths:
   /api/analysis:
     get:
@@ -17,6 +17,36 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AnalysResourceCollection'
+  '/api/users/{userId}/analysis':
+    post:
+      tags:
+        - analys
+        - api
+      description: 'Add analysis for userId.'
+      operationId: apiUsersAnalysisCreate
+      parameters:
+        -
+          name: userId
+          in: path
+          description: 'user id'
+          required: true
+          schema:
+            type: string
+      requestBody:
+        $ref: '#/components/requestBodies/CreateUserAnalysisRequest'
+      responses:
+        '201':
+          description: 'Analysis for user added.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserAnalysResourceCollection'
+        '401':
+          description: Unauthorized.
+        '403':
+          description: Forbidden.
+        '422':
+          description: 'Validation error.'
   /api/auth/login:
     post:
       tags:
@@ -84,6 +114,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserResource'
+        '422':
+          description: 'Validation error.'
   '/email/verify/{id}/{hash}':
     get:
       tags:
@@ -207,7 +239,7 @@ components:
           description: 'ID User Analys'
           type: string
           format: uuid
-        user:
+        user_id:
           description: 'ID User'
           type: string
         analys_id:
@@ -233,6 +265,14 @@ components:
           description: 'Datetime updated at of analys for user'
           type: string
           format: date-time
+      type: object
+    UserAnalysResourceCollection:
+      title: UserAnalysResourceCollection
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/UserAnalysResource'
       type: object
     TokenResource:
       title: TokenResource
