# src/Presentation/Analys/Controllers/UserAnalysController.php
@@ -12,6 +12,8 @@ use Presentation\Analys\Requests\CreateUserAnalysisRequest;
 use Presentation\Analys\Requests\DeleteUserAnalysisRequest;
 use Presentation\Analys\Requests\IndexUserAnalysisRequest;
 use Presentation\Analys\Resources\UserAnalysResource;
+use OpenApi\Attributes as OA;
+use Presentation\Analys\Resources\UserAnalysResourceCollection;
 
 class UserAnalysController extends BaseController
 {
@@ -19,13 +21,40 @@ class UserAnalysController extends BaseController
         protected readonly UserAnalysServiceContract $userAnalysService,
     ) {}
 
+    #[OA\Post(
+        path: '/api/users/{userId}/analysis',
+        operationId: 'apiUsersAnalysisCreate',
+        description: 'Add analysis for userId.',
+        tags: ['analys', 'api'],
+        requestBody: new OA\RequestBody(ref: CreateUserAnalysisRequest::class),
+        parameters: [
+            new OA\Parameter(name: 'userId', in: 'path', description: 'user id', required: true, schema: new OA\Schema(type: 'string')),
+        ]
+    )]
+    #[OA\Response(
+        response: 201,
+        description: 'Analysis for user added.',
+        content: new OA\JsonContent(ref: UserAnalysResourceCollection::class)
+    )]
+    #[OA\Response(
+        response: 401,
+        description: 'Unauthorized.',
+    )]
+    #[OA\Response(
+        response: 403,
+        description: 'Forbidden.',
+    )]
+    #[OA\Response(
+        response: 422,
+        description: 'Validation error.',
+    )]
     public function create(CreateUserAnalysisRequest $request): JsonResponse
     {
         $dto = $request->getDTO();
 
         $userAnalysis = $this->userAnalysService->createUserAnalysis($dto);
 
-        return Response::json(UserAnalysResource::collection($userAnalysis), 201);
+        return Response::json(new UserAnalysResourceCollection($userAnalysis), 201);
     }
 
     public function index(IndexUserAnalysisRequest $request): JsonResponse
